--- a/package.json
+++ b/package.json
@@ -3,19 +3,16 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "heroku-postbuild": "ng build --prod"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
     "@angular/cdk": "^16.1.5",
-    "@angular/cli": "16.2.1",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
-    "@angular/compiler-cli": "16.2.4",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
     "@angular/material": "^16.1.5",
@@ -23,11 +20,9 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "bootstrap": "^5.3.1",
-    "express": "^4.18.2",
     "jspdf": "^2.5.1",
     "ngx-slick-carousel": "^15.0.0",
     "ngx-toastr": "^17.0.2",
-    "path": "^0.12.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -44,9 +39,5 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.1.3"
-  },
-  "engines": {
-    "node": "18.16.0",
-    "npm": "9.5.1"
   }
 }
