--- a/angular.json
+++ b/angular.json
@@ -41,8 +41,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "5kb",
+                  "maximumError": "10kb"
                 },
                 {
                   "type": "anyComponentStyle",
